--- a/doc/main.tex
+++ b/doc/main.tex
@@ -2,11 +2,12 @@
 
 \usepackage{semantic}
 \usepackage{dsfont}
+\usepackage{a4wide}
 \usepackage{array}
 
 % things for the semantic package
 \reservestyle{\command}{\textbf}
-\command{let,in,:,case,of}
+\command{let,in,:,case,of,if,then,else}
 \mathlig{-->}{\longrightarrow}
 \newcommand{\tyrel}{\sqsubseteq}
 % end semantic
@@ -142,12 +143,66 @@ These rules are formulated in a syntax-directed fashion.
         {\Gamma},C |- e_1 \<:> e_2  : ([\tau^{\varphi_1}])^{\varphi}
         } \\
 ~&~\\
-        $ [$\emph{t-var}$] $& \inference{{\Gamma}(x) = ({\sigma},\varphi)
+        $ [$\emph{t-var}$] $& \inference{
+        {\Gamma}(x) = ({\sigma},\varphi)
         & C |- \varphi \tyrel \varphi_1 
         & inst(\sigma) = C' => \tau
         }
-        {{\Gamma},C\cup C' |- x  : {\tau^{\varphi_1}}} \\
+        {
+        {\Gamma},C\cup C' |- x  : {\tau^{\varphi_1}}
+        } \\
 ~&~\\
+        $ [$\emph{t-app}$] $& \inference{
+        \Gamma,C |- e_1 : \tau_2^{\varphi_2} ->^{\varphi} \tau_0^{\varphi_0}
+        & \Gamma,C|- e_2 : \tau_2^{\varphi_3}
+        & C|- \varphi_3 \tyrel \varphi_2
+        & C|- \varphi   \tyrel \varphi_4
+        & C|- \varphi_0 \tyrel \varphi_4
+        }
+        {
+        \Gamma, C |- e_1 e_2 : \tau_0^{\varphi_4}
+        } \\
+~&~\\
+        $ [$\emph{t-if}$] $& \inference{
+        \Gamma, C |- e_0 : Bool % note: no annotation phi0
+        & \Gamma, C |- e_1 : \tau %again no phi1
+        & \Gamma, C |- e_2 : \tau % no phi2
+        & C |- \varphi_0 \tyrel \varphi
+        & C |- \varphi_1 \tyrel \varphi
+        & C |- \varphi_2 \tyrel \varphi
+        }
+        {
+        \Gamma,C|- \<if>\: e_0\: \<then>\: e_1\: \<else>\: e_2 : \tau^{\varphi} %TODO wrong?
+        } \\
+~&~\\
+        $ [$\emph{t-bin-op}$] $& \inference{ % what about all the annotated simple vars?
+        \Gamma, C |- e_1 : \tau_{1\oplus}^{\varphi_1}
+        & \Gamma, C |- e_2 : \tau_{2\oplus}^{\varphi_2}
+        & C |- \varphi_1 \tyrel \varphi
+        & C |- \varphi_2 \tyrel \varphi
+        }
+        {
+        \Gamma, C|- e_1 \oplus e_2 : \tau_{\oplus}^\varphi
+        } \\
+~&~\\
+% todo do we need rules for case statements involving head and tail of lists??
+        $ [$\emph{t-let}$] $& \inference{
+        \Gamma, C' |- e_1 : \tau_1^{\varphi_1}
+        & (C'',\sigma) = gen(C', \tau_1)
+        & \Gamma[x \mapsto (\sigma, \varphi_1)],C\cup C'' |- e_2 : \tau_2^{\varphi_2}
+        & C\cup C'' |- \varphi_2 \tyrel \varphi_3
+        }
+        {
+        \Gamma,C\cup C'' |- \<let>\: x = e_1\: \<in>\: e_2 : \tau_2^{\varphi_3}
+        } \\
+~&~\\
+%         $ [$\emph{t-app}$] $& \inference{
+% ~ 
+%         }
+%         {
+% ~ 
+%         } \\
+% ~&~\\
 %TODO FIXME 
         \hline
     \end{tabular}
