more useless stuff

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,3 +1,11 @@
+
+%outline:
+
+% a type system
+% specification and an explanation of both the type system, a run through of one
+% or two examples and an architectural description of the implementation.
+% Features and limitations should be prominently displayed in your documentation. 
+
 \documentclass[a4paper]{article}
 
 \usepackage{semantic}
