--- a/doc/main.tex
+++ b/doc/main.tex
@@ -23,7 +23,7 @@
 \newcommand{\tyrel}{\sqsubseteq}
 % end semantic
 
-\author{Jurri\"en Stutterheim\and Ruben de Gooijer \and Paul van der Walt} 
+\author{Jurri\"en Stutterheim\and Ruben de Gooijer (3508617) \and Paul van der Walt (3120805)} 
 \date{\today} 
 \title{Implementation notes for Type and Effect Systems}
 
