--- a/doc/main.tex
+++ b/doc/main.tex
@@ -20,7 +20,7 @@
 \newcommand{\tyrel}{\sqsubseteq}
 % end semantic
 
-\author{Jurri\"en Stutterheim\and Ruben de Gooijer \and Paul van der Walt} 
+\author{Jurri\"en Stutterheim\footnote{3555003}\and Ruben de Gooijer\footnote{3508617}\and Paul van der Walt}
 \date{\today} 
 \title{Implementation notes for Type and Effect Systems}
 
