--- a/doc/main.tex
+++ b/doc/main.tex
@@ -13,6 +13,7 @@
 \usepackage{array}
 \usepackage{bussproofs}
 \usepackage{latexsym}
+\usepackage{apa}
 
 % things for the semantic package
 \reservestyle{\command}{\textbf}
