--- a/doc/main.tex
+++ b/doc/main.tex
@@ -401,7 +401,7 @@ the introduction, we do not offer support for pairs.
 
 Currently we only support a monovariant analysis. One of the most prominent issues
 preventing us from fully implementing a polyvariant analysis was that it was not
-entirely clear yet how we should go about resolving constraints during the anlysis.
+entirely clear yet how we should go about resolving constraints during the analysis.
 In addition, the role of the qualified type (or rather, qualified constraints)
 was not completely clear either. While we did have support for quantifying over
 annotation variables and generating several constraints on the quantified types,
