nil-rule correction

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -174,8 +174,7 @@ These rules are formulated in a syntax-directed fashion.
         } \\
 ~&~\\
         $ [$\emph{t-nil}$] $& \inference{
-        {\Gamma},C |- \<nil>\ : \tau^{\varphi_1}
-        & C |- \varphi \sqsupseteq \pi
+        C |- \varphi \sqsupseteq \pi
         }
         {
         {\Gamma},C |- \<nil>_\pi : [\tau^{\varphi_1}]^{\varphi}
